--- a/frontend/src/assets/scss/_variables.scss
+++ b/frontend/src/assets/scss/_variables.scss
@@ -1,1 +1,95 @@
 // Variable overrides
+
+// original
+// $primary-base:  #321fdb !default;
+// $primary-100:   #eae9fb !default;
+// $primary-200:   #d6d2fb !default;
+// $primary-300:   #c1bcf4 !default;
+// $primary-400:   #ada5f1 !default;
+// $primary-500:   #988fed !default;
+// $primary-600:   #8478ea !default;
+// $primary-700:   #6f62e6 !default;
+// $primary-800:   #5b4ce2 !default;
+// $primary-900:   #4635df !default;
+
+// Mariner
+$primary-base:  #1f6adb !default;
+$primary-100:   #E9F0FB !default;
+$primary-200:   #D2E1F8 !default;
+$primary-300:   #BCD2F4 !default;
+$primary-400:   #A5C3F1 !default;
+$primary-500:   #8FB5ED !default;
+$primary-600:   #79A6E9 !default;
+$primary-700:   #6297E6 !default;
+$primary-800:   #4C88E2 !default;
+$primary-900:   #3579DF !default;
+
+
+
+
+$primary-dark:  #134083 !default;
+$primary:       #1f6adb !default;
+$primary-50:    #8FB5ED !default;
+$primary-25:    #BCD2F4 !default;
+
+
+// original second:
+//$secondary-base:  #3c4b64 !default;
+
+//$secondary-100:   #ebedef !default;
+//$secondary-200:   #d8dbe0 !default;
+//$secondary-300:   #c4c9d0 !default;
+//$secondary-400:   #b1b7c1 !default;
+//$secondary-500:   #9da5b1 !default;
+//$secondary-600:   #8a93a2 !default;
+//$secondary-700:   #768192 !default;
+//$secondary-800:   #636f83 !default;
+//$secondary-900:   #4f5d73 !default;
+//
+//$secondary-dark:  #212233 !default;
+//$secondary:       #3c4b64 !default;
+//$secondary-50:    #9da5b1 !default;
+//$secondary-25:    #ced2d8 !default;
+
+// Calico (secondary)
+$secondary-base:  #dec78e !default;
+
+$secondary-100:   #FCF9F4 !default;
+$secondary-200:   #F8F4E8 !default;
+$secondary-300:   #F5EEDD !default;
+$secondary-400:   #F2E9D2 !default;
+$secondary-500:   #EFE3C7 !default;
+$secondary-600:   #EBDDBB !default;
+$secondary-700:   #E8D8B0 !default;
+$secondary-800:   #E5D2A5 !default;
+$secondary-900:   #E1CD99 !default;
+
+$secondary-dark:  #857755 !default;
+$secondary:       #dec78e !default;
+$secondary-50:    #EFE3C7 !default;
+$secondary-25:    #F8F4E8 !default;
+
+// brand gray color (original)
+//$gray-base:  #3c4b64 !default;
+$gray-100:   #ebedef !default;
+$gray-200:   #d8dbe0 !default;
+$gray-300:   #c4c9d0 !default;
+$gray-400:   #b1b7c1 !default;
+$gray-500:   #9da5b1 !default;
+$gray-600:   #8a93a2 !default;
+$gray-700:   #768192 !default;
+$gray-800:   #636f83 !default;
+$gray-900:   #4f5d73 !default;
+
+// brand gray color (Chambray)
+// #335991
+$gray-base:  #4b5c78 !default;
+$gray-100:   #ebedef !default;
+$gray-200:   #d8dbe0 !default;
+$gray-300:   #c4c9d0 !default;
+$gray-400:   #b1b7c1 !default;
+$gray-500:   #9da5b1 !default;
+$gray-600:   #8a93a2 !default;
+$gray-700:   #768192 !default;
+$gray-800:   #636f83 !default;
+$gray-900:   #4f5d73 !default;
